--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,9 @@
     },
     "extra": {
         "laravel": {
-            "providers": []
+            "providers": [
+                "Plexikon\\Kernel\\Provider\\CustomerServiceProvider"
+            ]
         }
     }
 }
