--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "plexikon/kernel",
+    "name": "plexikon/dev-kernel",
     "description": "shared kernel",
     "keywords": [],
     "license": "MIT",
