--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "ramsey/uuid": "^3.9",
         "react/promise": "^2.7",
         "plexikon/reporter": "dev-develop",
-        "plexikon/chronicle": "dev-message-to-event",
+        "plexikon/chronicle": "dev-develop",
         "ext-pcntl": "*"
     },
     "require-dev": {
